--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ header {
 
 #search-history button {
     margin-top: 10px;
-    width: 100%;
+    width: 50;
     padding: 10px;
     background-color: #1E213A;
     color: white;
@@ -50,5 +50,40 @@ header {
     background-color: #88869D;
     padding: 10px;
     margin: 10px;
+}
+
+.history-entry {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-bottom: 5px;
+}
+
+.delete-btn {
+
+}
+
+@media (min-width: 600px) {
+    .main-container {
+        display: flex;
+        display: block;
+    }
+    #search-section {
+        flex: 1;
+    }
+    #weather-container {
+        flex: 2;
+    }
+    #forecast-container {
+        display: flex;
+        justify-content: space-around;
+    }
+    #forecast-container {
+        display: block;
+    }
+    .forecast-card {
+        width: auto;
+        margin: 10px auto; 
+    }
 }
 
